Bug 885300 - don't inline js::ToAtom. r=nnethercote